--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,8 @@
 {
-  "presets": [["env", {
+  "presets": [["@babel/preset-env", {
     "targets": {
-      "node": 6.9
+      "node": 8
     }
-  }], "stage-0"],
-  "plugins": [
-    "babel-plugin-syntax-trailing-function-commas",
-    "babel-plugin-transform-class-properties",
-    "babel-plugin-transform-flow-strip-types",
-    "babel-plugin-transform-function-bind",
-    "babel-plugin-transform-object-rest-spread"
-  ]
+  }], "@babel/preset-flow"],
+  "plugins": ["@babel/proposal-object-rest-spread"]
 }
