--- a/package.json
+++ b/package.json
@@ -1,57 +1,33 @@
 {
   "name": "translation-io",
-  "description": "An unofficial implementation to sync your translations with translation.io.",
-  "version": "0.1.1",
-  "main": "lib/index.js",
-  "author": {
-    "name": "David Buchan-Swanson",
-    "email": "david.buchanswanson@gmail.com"
+  "version": "0.2.0",
+  "scripts": {
+    "build": "babel -d lib src/**/*.js"
   },
-  "files": [
-    "lib",
-    "src"
+  "keywords": [
+    "BuckleScript"
   ],
-  "bin": {
-    "translate": "lib/cli.js"
-  },
-  "bugs": {
-    "url": "https://github.com/deecewan/translation-io/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/deecewan/translation-io.git"
-  },
+  "author": "",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^7.1.1",
-    "babel-plugin-syntax-trailing-function-commas": "^6.22.0",
-    "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-plugin-transform-function-bind": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.2.1",
-    "babel-preset-stage-0": "^6.22.0",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2 || ^4.0.0",
-    "eslint-plugin-react": "^6.9.0",
-    "flow-bin": "^0.41.0"
+    "@babel/cli": "^7.0.0-beta.54",
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "@babel/preset-flow": "^7.0.0-beta.54",
+    "@deecewan/eslint-config-flow": "^0.0.7",
+    "babel-eslint": "^8.2.6",
+    "eslint": "^5.2.0",
+    "flow-bin": "^0.77.0",
+    "flow-typed": "^2.5.1",
+    "prettier": "^1.13.7"
   },
   "dependencies": {
-    "axios": "^0.15.3",
-    "chalk": "^1.1.3",
-    "glob": "^7.1.1",
-    "lodash.mergewith": "^4.6.0",
-    "mkdirp": "^0.5.1",
-    "rimraf": "^2.6.1",
-    "yargs": "^7.0.2"
-  },
-  "scripts": {
-    "build": "babel -d lib/ src",
-    "build:watch": "yarn build -- --watch",
-    "prepublish": "yarn build"
+    "@deecewan/commander": "^2.16.1",
+    "axios": "^0.18.0",
+    "chalk": "^2.4.1",
+    "glob": "^7.1.2",
+    "lodash.intersection": "^4.4.0",
+    "sarcastic": "^1.4.0"
   }
 }
