--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "translation-io",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "author": "David Buchan-Swanson <david.buchanswanson@gmail.com>",
   "license": "MIT",
-  "bin": { "translate": "./lib/index.js" },
+  "bin": {
+    "translate": "./lib/index.js"
+  },
   "scripts": {
     "build": "babel -d lib src/**/*.js",
     "prepublish": "yarn build"
